--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -88,9 +88,10 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
       <div class="popup-controls">
         <input id="popup-found" type="checkbox">
         <label for="popup-found" title="Toggle found">Found</label>
-        <a class="popup-link" id="popup-wiki-link" href="#" target="_blank" title="Wiki link"><i class="fa fa-brands fa-wikipedia-w"></i></a>
+        <a class="popup-link" id="popup-wiki-link" href="#" target="_blank" title="Go to Wiki (external link)"><i class="fa fa-brands fa-wikipedia-w"></i></a>
         <a class="popup-link" id="popup-marker-link" href="#" target="_blank" title="Copy name link to clipboard"><i class="fa fa-link"></i></a>
         <a class="popup-link" id="popup-location-link" href="#" target="_blank" title="Copy location link to clipboard"><i class="fa fa-location-crosshairs"></i></a>
+        <a class="popup-link" id="popup-id-link" href="#" target="_blank" title="Copy item id to clipboard"><i class="fa fa-hashtag"></i></a>
       </div>
     </div>
   </div>
@@ -562,7 +563,7 @@ function copyToClipboard(text) {
 
 
 function canonicalID(id) {
-  return id.substring(2);
+  return id.slice(2);
 }
 
 function getMapURL(id) {
@@ -675,6 +676,8 @@ function popupOnClick(e) {
     popup.querySelector('#popup-data').innerHTML = '<hr/>'+JSON.stringify(o, null, 2).replaceAll('\n','<br>').replaceAll(' ','&nbsp;');
     popup.querySelector('#popup-found').checked = settings.markedItems[o.form_id]==true;
     popup.querySelector('#popup-found').onclick = function() { toggleMarked(o.form_id) };
+    popup.querySelector('#popup-id-link').href = '#' + o.form_id;
+    popup.querySelector('#popup-id-link').onclick = function(e){ copyToClipboard(e.target.href.split('#')[1]); return false; };
     popup.querySelector('#popup-marker-link').href = getMapURL(o.name);
     popup.querySelector('#popup-marker-link').onclick = copyLink;
     popup.querySelector('#popup-location-link').href = getMapURL(canonicalID(o.form_id));
