--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -679,7 +679,9 @@ function popupOnClick(e) {
     popup.querySelector('#popup-id-link').href = '#' + (o.form_id || o.marker_id);
     popup.querySelector('#popup-id-link').onclick = function(e){ copyToClipboard(e.target.href.split('#')[1]); return false; };
 
-    popup.querySelector('#popup-location-link').href = getMapURL(o.form_id ? o.marker_id : o.name);
+    let location_id = o.form_id && (o.original_type || o.type)!='NPC_' ? o.marker_id : o.name; // npc and locations are referred by name
+
+    popup.querySelector('#popup-location-link').href = getMapURL(location_id);
     popup.querySelector('#popup-location-link').onclick = copyLink;
 
     popup.querySelector('#popup-wiki-link').href = 'https://fallout.wiki/wiki/Mod:Fallout_London/'+encodeURIComponent(o.name);
