--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -679,7 +679,7 @@ function popupOnClick(e) {
     popup.querySelector('#popup-id-link').href = '#' + (o.form_id || o.marker_id);
     popup.querySelector('#popup-id-link').onclick = function(e){ copyToClipboard(e.target.href.split('#')[1]); return false; };
 
-    let location_id = o.form_id && (o.original_type || o.type)!='NPC_' ? o.marker_id : o.name; // npc and locations are referred by name
+    let location_id = o.form_id && (o.original_type || o.type)!='NPC_' ? canonical(o.marker_id) : o.name; // npc and locations are referred by name
 
     popup.querySelector('#popup-location-link').href = getMapURL(location_id.replace(/[\s|_]+/g,'_'));
     popup.querySelector('#popup-location-link').onclick = copyLink;
