--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -11,6 +11,7 @@
 <meta property="og:title" content="Joric's Fallout London" />
 <meta property="og:description" content="Interactive Map" />
 <link rel="icon" href="data:,">
+<link rel="search" type="application/opensearchdescription+xml" href="https://joric.github.io/maps/fallout-london/opensearch.xml" title="Joric's Fallout London" >
 
 <link rel="stylesheet" href="main.css">
 
