--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -159,7 +159,7 @@ let maps = {
 };
 
 let factions = {
-  'Pistols': {npc:'Pistol',color:'darkslategrey'},
+  'Pistols': {npc:'Pistol',color:'darkgoldenrod'},
   'Isle of Dogs': {npc:'IODS', color:'forestgreen'},
   '5th Column': {npc:'5thColumn', color:'darkorchid'},
   'Vagabonds': {npc:'Vagabonds', color:'saddlebrown'},
@@ -168,6 +168,7 @@ let factions = {
   'Angels': {npc:'NPC_Angel', color:'red'},
   'Tommies': {npc:'Tommy', color:'royalblue'},
   'Gentry': {npc:'Gentry', color:'lightgrey'},
+  'Thamesfolk': {npc:'NPC_Thameshaven', color: 'darkslategrey'},
 }
 
 function getFaction(o) {
