--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -159,7 +159,7 @@ let maps = {
 };
 
 let factions = {
-  'Pistols': {npc:'Pistol',color:'darkgoldenrod'},
+  'Pistols': {npc:'Pistol',color:'goldenrod'},
   'Isle of Dogs': {npc:'IODS', color:'forestgreen'},
   '5th Column': {npc:'5thColumn', color:'darkorchid'},
   'Vagabonds': {npc:'Vagabonds', color:'saddlebrown'},
