--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -159,12 +159,12 @@ let maps = {
 };
 
 let factions = {
-  'Pistols': {npc:'Pistol',color:'goldenrod'},
+  'Pistols': {npc:'Pistol',color:'slategrey'},
   'Isle of Dogs': {npc:'IODS', color:'forestgreen'},
   '5th Column': {npc:'5thColumn', color:'darkorchid'},
   'Vagabonds': {npc:'Vagabonds', color:'saddlebrown'},
   'Camelot': {npc:'NPC_Camelot', color:'darkorange'},
-  'Roundels': {npc:'NPC_Roundel', color:'slategrey'},
+  'Roundels': {npc:'NPC_Roundel', color:'goldenrod'},
   'Angels': {npc:'NPC_Angel', color:'red'},
   'Tommies': {npc:'Tommy', color:'royalblue'},
   'Gentry': {npc:'Gentry', color:'lightgrey'},
