--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -164,7 +164,7 @@ let factions = {
   '5th Column': {npc:'5thColumn', color:'darkorchid'},
   'Vagabonds': {npc:'Vagabonds', color:'saddlebrown'},
   'Camelot': {npc:'NPC_Camelot', color:'darkorange'},
-  'Roundels': {npc:'NPC_Roundel', color:'goldenrod'},
+  'Roundels': {npc:'NPC_Roundel', color:'darkgoldenrod'},
   'Angels': {npc:'NPC_Angel', color:'red'},
   'Tommies': {npc:'Tommy', color:'royalblue'},
   'Gentry': {npc:'Gentry', color:'lightgrey'},
